# sns-mp2

./: .gitignore  .travis.yaml  LICENCE.txt  README.md  decomp2.py  garden-install-helper  garden-prereq.txt  psi4nnmp2.py  psi4nnmp22.py  qmdb-to-psi.py  setup.cfg  setup.py
dataset/: README.md
psi4nnmp2/: __init__.py  contextdecorator.py  desbasis.json  eshlovlp.py  format_output.py  frozencore.py  nnmp2.py  optstash.py  wavefunctioncache.py
snsmp2/: __init__.py  contextdecorator.py  desbasis.json  desbasis.py  eshlovlp.py  format_output.py  frozencore.py  model.py  optstash.py  resources.py  snsmp2.py  wavefunctioncache.py  weights.npz
tests/: 2x{CC}.in  Imidazole-Dimer.in  cleanup  conftest.py  runtest.py  simple.in  {CF}_O.in
tools/: qmdb-to-psi.py
