[metadata]
name = snsmp2
author = Robert T. McGibbon
author-email = robert.mcgibbon@deshawresearch.com
summary = Spin-network-scaled MP2
description-file = README.md
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    snsmp2
package-data = snsmp2 = desbasis.json weights.0061900.npz

[tool:pytest]
python_files = tests/runtest.py
addopts = --verbose --capture=no
